syntax = "proto3";

package api.demo.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "kratos-project-template/api/demo/v1;v1";
option java_multiple_files = true;
option java_package = "api.demo.v1";

// Demo service provides example API endpoints
service Demo {
  // GetHello returns a hello message
  rpc GetHello(GetHelloRequest) returns (Reply) {
    option (google.api.http) = {
      get : "/demo/hello"
    };
  }

  // Health check endpoint
  rpc CheckHealthy(CheckHealthyRequest) returns (CheckHealthyResponse) {
    option (google.api.http) = {
      get : "/demo/health"
    };
  }
}

// GetHelloRequest is the request for GetHello
message GetHelloRequest { string name = 1; }

// Health check messages
message CheckHealthyRequest {
  // Optional: service name to check
  optional string service = 1;
}

// HealthDetails contains detailed health information for each component
message HealthDetails {
  // Component status: "healthy", "unhealthy", "unavailable", "not_configured"
  string status = 1;
  // Optional error message if component is unhealthy
  string error = 2;
  // Optional latency in milliseconds
  double latency_ms = 3;
}

// CheckHealthyResponse contains the health status of the service
message CheckHealthyResponse {
  // Health status: "healthy", "degraded", "unhealthy"
  string status = 1;
  // Service name
  string service = 2;
  // Timestamp of the health check
  int64 timestamp = 3;
  // Health details for each component (database, redis, etc.)
  map<string, HealthDetails> details = 4;
}

// Common response structure
message Reply {
  // Response status code, 0 indicates success, non-zero indicates failure
  int32 code = 1;
  // Response message
  string message = 2;
  // Response data (using Struct type, can directly return JSON object)
  google.protobuf.Struct data = 3;
}
